Set up lerna to start the 'mock json server' and the web-client

--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
     "packages": [
         "common/*",
         "services/*/*",
+        "services/mock-server",
         "web-clients/prototypes/*"
     ],
     "version": "1.76.0"
