--- a/services/mock-server/package.json
+++ b/services/mock-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leaderboard",
+  "name": "leaderboard-mock-json-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
