--- a/services/mock-server/package.json
+++ b/services/mock-server/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "redux-devtools-extension": "2.13.8"
+  }
 }
