--- a/services/leaderboard-service/api/serverless.yml
+++ b/services/leaderboard-service/api/serverless.yml
@@ -7,7 +7,7 @@ provider: # General deployment information for the service in AWS
   region: ${opt:region, 'us-east-1'}
   stackName: ${self:custom.serviceName}-${opt:stage}
   deploymentBucket:
-    name: ${opt:stage}-gffny-${self:custom.serviceName}
+    name: gffny-${self:custom.serviceName}-${opt:stage}
     tags:
       Environment: ${opt:stage}
       Application: ${self:provider.stackName}
