--- a/services/leaderboard-service/api/serverless.yml
+++ b/services/leaderboard-service/api/serverless.yml
@@ -27,10 +27,8 @@ functions: # Reference to serverless config file specifying lambda functions con
 # resources: # Reference to serverless config file containing raw AWS CloudFormation
 #   ${file(./config/resources.serverless.yml)}
 
-# custom: # Reference to serverless config file containing additional configuration like that required by serverless plugins
-#   ${file(./config/custom.serverless.yml):${opt:stage}}
-custom:
-  serviceName: leaderboard-service
+custom: # Reference to serverless config file containing additional configuration like that required by serverless plugins
+  ${file(./config/custom.serverless.yml):${opt:stage}}
 
 plugins: # Serverless plugins (note: cannot be moved to an external file)
   - serverless-offline
