--- a/services/leaderboard-service/api/serverless.yml
+++ b/services/leaderboard-service/api/serverless.yml
@@ -24,8 +24,8 @@ provider: # General deployment information for the service in AWS
 functions: # Reference to serverless config file specifying lambda functions configuration
   ${file(./config/functions.serverless.yml)}
 
-# resources: # Reference to serverless config file containing raw AWS CloudFormation
-#   ${file(./config/resources.serverless.yml)}
+resources: # Reference to serverless config file containing raw AWS CloudFormation
+  ${file(./config/resources.serverless.yml)}
 
 custom: # Reference to serverless config file containing additional configuration like that required by serverless plugins
   ${file(./config/custom.serverless.yml):${opt:stage}}
