--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
   directories:
     - node_modules  
 install:
+  - pip install --upgrade pip
   - sudo pip3 install --upgrade awscli
   - npm install -g lerna
   - npm install serverless -g
