--- a/services/leaderboard-service/api/config/resources.serverless.yml
+++ b/services/leaderboard-service/api/config/resources.serverless.yml
@@ -1,2 +1,2 @@
 Resources:
-    MySqlRDSInstance: ${file(./config/resource/MySqlRDSInstance.yml)}
+    #MySqlRDSInstance: ${file(./config/resource/MySqlRDSInstance.yml)}
