fixed issue with prod service name

--- a/services/leaderboard-service/api/config/custom.serverless.yml
+++ b/services/leaderboard-service/api/config/custom.serverless.yml
@@ -74,7 +74,7 @@ prod: # production env config
     environment:
         NODE_TLS_REJECT_UNAUTHORIZED: 0
 
-    serviceName: 'funding-management-service'
+    serviceName: 'leaderboard-service'
 
     stage: ${opt:stage, self:provider.stage}
 
