--- a/services/round-analysis-service/api/package.json
+++ b/services/round-analysis-service/api/package.json
@@ -4,7 +4,25 @@
     "description": "analysis service api",
     "main": "index.js",
     "scripts": {
-        "test": "unit"
+        "unit": "jest",
+        "lint": "eslint .",
+        "integration": "jest --testRegex 'test/.*integration-test.*'",
+        "deploy": "./deploy.sh",
+        "prunepackages": "npm prune --production",
+        "start": "npm-run-all -p -c start-local-round-analysis-services",
+        "start-local-round-analysis-services": "sls offline --stage local --stream",
+        "debug-local": "node --inspect ./node_modules/serverless/bin/serverless offline --stage local  --stream"
+    },
+    "devDependencies": {
+        "eslint": "^5.16.0",
+        "serverless": "^1.42.2",
+        "serverless-aws-documentation": "^1.1.0",
+        "serverless-deployment-bucket": "^1.1.0",
+        "serverless-domain-manager": "^3.2.2",
+        "serverless-dynamodb-local": "0.2.37",
+        "serverless-jest-plugin": "^0.2.1",
+        "serverless-offline": "^4.10.6",
+        "serverless-plugin-optimize": "^4.0.2-rc.1"
     },
     "author": "",
     "license": "ISC"
